cabal-version: 2.4
name: job-sq
version: 0.1
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara, 2024
category: Databases
build-type: Simple
synopsis: Job queue. Sq backend.
description: Job queue. Sq backend.
homepage: https://github.com/k0001/hs-job
bug-reports: https://github.com/k0001/hs-job/issues
tested-with: GHC == 9.8.1

common basic
  default-language: GHC2021
  ghc-options: -O2 -Wall
  build-depends:
    base == 4.*,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingVia
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    RoleAnnotations

library
  import: basic
  hs-source-dirs: lib
  exposed-modules:
    Job.Sq
  build-depends:
    aeson,
    base,
    contravariant,
    job,
    resourcet,
    resourcet-extra,
    safe-exceptions,
    stm,
    sq,
    time,
    transformers,

test-suite test
  import: basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    df1,
    di,
    di-core,
    job,
    job-sq,
    random,
    resourcet,
    sq,
    time,
